fix horizontal scrollbar appearing

--- a/client/css/style.styl
+++ b/client/css/style.styl
@@ -29,7 +29,6 @@ a:hover
   background-color $background-hilight
   background linear-gradient(top, $background-hilight 5%, $background-color 95%)
   color $text-color
-  padding 15px
   margin-bottom 2px
   width 100%
 
@@ -66,7 +65,7 @@ a:hover
 
 #breadcrumb
   margin 0
-  padding 0
+  padding 15px
 
   li
     display inline-block
